[gd_scene load_steps=16 format=3 uid="uid://c2umlfrbfoohn"]

[ext_resource type="Texture2D" uid="uid://dj4vkb65uxylx" path="res://Asset/Background_options.png" id="1_r314q"]
[ext_resource type="Script" uid="uid://cc6oyudub4on1" path="res://options.gd" id="1_ywiuv"]
[ext_resource type="Texture2D" uid="uid://8u47bfgf4cg" path="res://Asset/Main menu.png" id="2_2r1l1"]
[ext_resource type="FontFile" uid="uid://bg5vy768sdcgk" path="res://fonts/BebasNeue-Regular.ttf" id="3_2r1l1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yia4p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rakeu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_16l4c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a7o2r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ywiuv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2r1l1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bwr58"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dfe3t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t1d33"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5pjjr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jjsel"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ywiuv")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_2r1l1")
expand_mode = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 176
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 176
theme_override_constants/margin_bottom = 50

[node name="Background" type="NinePatchRect" parent="HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(800, 400)
layout_mode = 2
texture = ExtResource("1_r314q")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="Settings" type="Label" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_2r1l1")
theme_override_font_sizes/font_size = 40
text = "Options"

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 140
theme_override_constants/margin_bottom = 40

[node name="Brightness" type="HBoxContainer" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, -90)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/Brightness"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_2r1l1")
theme_override_font_sizes/font_size = 25
text = "Bright      "

[node name="HSlider_bright" type="HSlider" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/Brightness"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_vertical = 8
max_value = 1.0
step = 0.01

[node name="Angka" type="Label" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/Brightness"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_2r1l1")
theme_override_font_sizes/font_size = 25
text = "     0%"

[node name="Audio" type="HBoxContainer" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="Label" type="Label" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/Audio"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_2r1l1")
theme_override_font_sizes/font_size = 25
text = "Audio      "

[node name="HSlider" type="HSlider" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/Audio"]
custom_minimum_size = Vector2(510, 0)
layout_mode = 2
size_flags_vertical = 8
max_value = 1.0
step = 0.01

[node name="Angka" type="Label" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/Audio"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_2r1l1")
theme_override_font_sizes/font_size = 25
text = "     0%"

[node name="Musik" type="HBoxContainer" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="music" type="Label" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/Musik"]
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_2r1l1")
theme_override_font_sizes/font_size = 25
text = "Music      "

[node name="HSlider_musik" type="HSlider" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/Musik"]
custom_minimum_size = Vector2(510, 0)
layout_mode = 2
size_flags_vertical = 8
max_value = 1.0
step = 0.01

[node name="angka_musik" type="Label" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/Musik"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_2r1l1")
theme_override_font_sizes/font_size = 25
text = "     0%"

[node name="Return" type="Button" parent="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("3_2r1l1")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxEmpty_yia4p")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_rakeu")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_16l4c")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_a7o2r")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ywiuv")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_2r1l1")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_bwr58")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_dfe3t")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_t1d33")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_5pjjr")
theme_override_styles/focus = SubResource("StyleBoxEmpty_jjsel")
text = "Return"

[node name="Action_keybind" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 236.0
offset_top = 220.0
offset_right = 502.0
offset_bottom = 270.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Keybind" type="Label" parent="Action_keybind"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2r1l1")
theme_override_font_sizes/font_size = 25
text = "Keybind  "
horizontal_alignment = 1
vertical_alignment = 1

[node name="action_button" type="Button" parent="Action_keybind"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_fonts/font = ExtResource("3_2r1l1")
theme_override_font_sizes/font_size = 20
text = "press it then go block"

[connection signal="value_changed" from="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer/MarginContainer/Brightness/HSlider_bright" to="." method="_on_h_slider_bright_value_changed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/MarginContainer/VBoxContainer/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="Action_keybind/action_button" to="." method="_on_action_button_pressed"]
